Bug 96947 - Check marks on menus (Windows 7 Aero theme, OpenGL enabled) miss their borders
Summary: Check marks on menus (Windows 7 Aero theme, OpenGL enabled) miss their borders
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
4.4.0.3 release
Hardware: All Windows (All)
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:6.1.0 target:6.0.5
Keywords:
Depends on:
Blocks: VCL-OpenGL
  Show dependency treegraph
 
Reported: 2016-01-07 14:58 UTC by Olivier R.
Modified: 2018-09-19 14:08 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
Font comparison (3.16 KB, image/png)
2016-01-07 14:58 UTC, Olivier R.
Details
UI-glitches (104.58 KB, image/png)
2016-01-07 14:59 UTC, Olivier R.
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Olivier R. 2016-01-07 14:58:39 UTC
Created attachment 121783 [details]
Font comparison

On master and LO 5.1, UI on Windows has decayed.

I noticed 3 problems, maybe there is more.


1. (strange glitches)
Selected tab in dialogs has lost its borders.
Check marks in menus have lost their borders.


2. (annoying bug)
Open a menu, then slide to other menus. On LO 5, rendering of menus is fast and is done instantly. On LO dev, rendering is slow and we see empty menu before the content is being displayed.


3. (very important bug)
Font rendering has decayed. If you are not a daily Windows user, you may not notice it immediately, but it strikes me as soon as I opened the window.
(See attachment.)
It is particularly visible on letters “v” and “w”. But the whole rendering is not as neat on LO dev than on LO 5.
Comment 1 Olivier R. 2016-01-07 14:59:12 UTC
Created attachment 121784 [details]
UI-glitches
Comment 2 Adolfo Jayme Barrientos 2016-01-07 16:15:35 UTC
Please NEVER cram multiple issues in a single bug report. Thanks.

> Selected tab in dialogs has lost its borders

Already known; it’s bug 95618.

> Check marks in menus have lost their borders.

Let’s make this report focus on that.

> rendering is slow and we see empty menu before the content is being displayed

Again, known. Please disable OpenGL in the settings as a workaround.

> Font rendering has decayed

That’s your opinion. It’s just a different setting of Windows’ DirectWrite, as compared to the older GDI+ rendering. It hasn’t “decayed” nor it’s an actual issue. The newer rendering is also implemented in modern Windows apps.
Comment 3 Michael Meeks 2016-04-08 15:18:01 UTC
Marco - can you look at the check-box issue here - I imagine it is another example of that state not being included in the native widget theme / texture cache key (we need that fixed generically :-)

Thanks !
Comment 4 Xisco Faulí 2016-09-13 10:24:38 UTC
Since we have a bibisect repository for windows covering the branch where this regression was introduced, adding keyword 'bibisectRequest'.
More info: https://wiki.documentfoundation.org/QA/Bibisect/Windows
Comment 5 Xisco Faulí 2017-09-29 08:53:40 UTC Comment hidden (obsolete)
Comment 6 Aron Budea 2017-11-11 12:28:44 UTC
Still reproduced in LO 5.4.3.2.
Already there in LO 4.4.0.3, adjusting earliest version. Removing regression-related keywords, as no known good version has been reported.

That was the check mark issue. For font rendering with OpenGL, probably bug 107521 is relevant, see bug 107521 comment 21.
Comment 7 Miklos Vajna 2018-05-11 09:56:02 UTC
(In reply to Michael Meeks from comment #3)
> Marco - can you look at the check-box issue here - I imagine it is another
> example of that state not being included in the native widget theme /
> texture cache key (we need that fixed generically :-)

SAL_WITHOUT_WIDGET_CACHE=1 leaves this unchanged, but SAL_NO_NWF=1 works the problem around, so I guess it's more like we use something in the Windows NWF code that is not supported by the opengl backend. I'll try to find out what is that.
Comment 8 Commit Notification 2018-05-14 08:35:33 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=b160db926b574b7e9d6696d49dbbce8dd289aade

tdf#96947 vcl opengl win: fix background of menu items w/ check/radio marks

It will be available in 6.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2018-05-16 15:22:10 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-6-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=96bb95e64240ddeb59d623d62fa30b2a7191bfc4&h=libreoffice-6-0

tdf#96947 vcl opengl win: fix background of menu items w/ check/radio marks

It will be available in 6.0.5.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Luke 2018-09-19 14:08:31 UTC
The fix for this caused a regression in FontWork menus which have both Check marks and radio buttons in the menu. See Bug 119947