tdf#96947 vcl opengl win: fix background of menu items w/ check/radio marks

Extract the actually used bounding box from the rendering code and reuse
that for OpenGL texture purposes, so the available and the used size
can't mismatch.

The background itself is almost invisible, but the borders were lost due
to this size difference.

Change-Id: I31b3e5aa0c0106461b90bfaab3a84d45b33afd71
Reviewed-on: https://gerrit.libreoffice.org/54298
Reviewed-by: Miklos Vajna <vmiklos@collabora.co.uk>
Tested-by: Jenkins <ci@libreoffice.org>